# web-testing

./: .gitignore  docker-compose.yml  pyproject.toml
app/: bearer.py  main.py  settings.py
app/database/: session.py
app/depends/: uow.py
app/models/: __init__.py  answer.py  course.py  enrollment.py  lesson.py  module.py  question.py  result.py  testing.py  user.py
app/repositories/: __init__.py  answer.py  course.py  enrollment.py  lesson.py  module.py  question.py  repository.py  result.py  testing.py  unit_of_work.py  user.py
app/routes/: answer.py  auth.py  question.py  result.py  testing.py  user.py  user_answer.py  user_testing.py
app/schemas/: answers.py  auth.py  courses.py  enrollments.py  lessons.py  modules.py  questions.py  results.py  tests.py  users.py
app/services/: auth.py
app/utils/: types.py
migrations/: env.py
migrations/versions/: 9ab6270bfae1_added_course_module_lesson_enrollment.py  d9a98b6e6998_init_migration.py
